assets/css/core/zmedia.css
@media screen and (max-width: 720px) {

    body {
        font-size: 17px;
    }

    .top-link {
        color: transparent;
        background: transparent;
    }
    /* theme-vars */
    :root {
        --gap: clamp(14px, 3.3vw, 24px);
        --content-gap: 15px;
        --header-height: 50px;
    }
    /* profile-mode */
    .profile img {
        transform: scale(0.85);
        user-select: none;
        -webkit-touch-callout: none;
        -webkit-user-drag: none;
    }

    /* post-entry */
    .first-entry {
        min-height: 260px;
    }

    /* archive */
    .archive-month {
        flex-direction: column;
    }

    .archive-year {
        margin-top: 20px;
    }

    /* footer */
    .footer {
        padding: calc((var(--footer-height) - var(--gap) - 10px) / 2) var(--gap);
    }
    
    ::-webkit-scrollbar {
        width:15px;
        height: 11px
    }

    /* .page-header, .post-header {
    margin: 8px auto var(--content-gap) 0;
    } */
    .page-header h1 {
        font-size: clamp(35px, 5.6vw, 40px);;
    }

    .entry-header h2 {
        font-size: clamp(21px, 3.4vw, 22px);
        line-height: 1.3;
    }

    .post-title {
        margin-bottom: 2px;
        font-size: 33px;
    }

    .post-content h1 {
        font-size: 29px;
        line-height: 1;
        margin: 15px auto 10px
    }

    .post-content h2 {
        font-size: 27px;
        line-height: 1;
        margin: 10px auto 10px;
    }

    .post-content h3 {
        font-size: 24px;
        line-height: 1;
        margin: 10px auto 10px;
    }

    .post-content h4 {
        font-size: 20px;
        line-height: 1;
        margin: 10px auto 8px;
    }

    .post-content h5 {
        font-size: 18px;
        line-height: 1;
        margin: 10px auto 6px;
    }

    .post-content h6 {
        font-size: 18px;
        line-height: 1;
        margin: 10px auto 4px;
    }
}

/* footer
@media screen and (max-width: 900px) {
    .list .top-link {
        transform: translateY(-5rem);
    }
} */



@media (prefers-reduced-motion) {
    /* terms; profile-mode; post-single; post-entry; post-entry; search; search */
    .terms-tags a:active,
    .button:active,
    .post-entry:active,
    .top-link,
    #searchResults .focus,
    #searchResults li:active {
        transform: none;
    }
}

